--- a/opening.css
+++ b/opening.css
@@ -162,3 +162,10 @@
   #controlButton:hover {
     box-shadow: 0px 0px 20px 10px #ffffffaf;
   }
+
+ .disclaimer {
+  font-family: "Poppins", serif;
+  color: #ad88c6;
+  font-weight: 300;
+  font-size: 15px;
+ }
