--- a/submit.css
+++ b/submit.css
@@ -128,12 +128,12 @@
     font-family: "Cormorant Garamond", serif;
     font-weight: 400;
     font-style: normal;
-    padding: 10px;
+    padding: 5px;
     background-color: #c8a1e0;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    max-height: 300px;
+    max-height: 400px;
     overflow-y: auto;
     scroll-snap-type: y mandatory;
   }
@@ -208,4 +208,61 @@ audio {
 
 #controlButton:hover {
   box-shadow: 0px 0px 20px 10px #ffffffaf;
+}
+
+
+.form-section {
+  position: sticky; 
+  top: 5px; 
+  
+  z-index: 1000;
+  background-color: #c8a1e0;
+  padding: 20px;
+  border-radius: 10px;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+
+
+.form-section h2 {
+  color: white;
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+
+.form-section form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+}
+
+.form-section input,
+.form-section textarea {
+  align-items: center;
+  width: 90%;
+  height: 80%;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  font-size: 16px;
+}
+
+.form-section button {
+  padding: 10px 20px;
+  border: none;
+  background-color: white;
+  color: #c8a1e0;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.form-section button:hover {
+  background-color: #beaee2;
+  color: white;
 }
