--- a/submit.css
+++ b/submit.css
@@ -12,6 +12,8 @@
   }
   
   body {
+      height: 100%;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
