--- a/rsvp.css
+++ b/rsvp.css
@@ -12,6 +12,8 @@ root {
   }
   
   body {
+    height: 100%;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
