--- a/submit.css
+++ b/submit.css
@@ -216,7 +216,7 @@ audio {
 .form-section {
   position: sticky; 
   top: 5px; 
-  
+  border-bottom: 1px solid white;
   z-index: 1000;
   background-color: #c8a1e0;
   padding: 20px;
