--- a/submit.css
+++ b/submit.css
@@ -215,7 +215,7 @@ audio {
 
 .form-section {
   position: sticky; 
-  top: 5px; 
+  top: 0; 
   border-bottom: 1px solid white;
   z-index: 1000;
   background-color: #c8a1e0;
